cmake_minimum_required(VERSION 3.17)
project(PremierPlus)

set(CMAKE_CXX_STANDARD 11)

add_executable(strgfun strgfun.cpp)
add_executable(strgback strgback.cpp)
add_executable(strtype3 strtype3.cpp)
add_executable(structur structur.cpp)
add_executable(arrstruct arrstruct.cpp)
add_executable(union union.cpp)
add_executable(inline inline.cpp)
add_executable(firstref firstref.cpp)
add_executable(swaps swaps.cpp)
add_executable(strtref fun_ptr.cpp)
add_executable(left left.cpp)
add_executable(funtemp funtemp.cpp)
add_executable(leftover leftover.cpp)
add_executable(mytime0 11/mytime0.cpp)
add_executable(usetime0 11/usetime0.cpp)